--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ django = "*"
 pillow = "*"
 django-allauth = "*"
 django-braces = "*"
+django-embed-video = "*"
 
 [requires]
 python_version = "3.7"
