--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ verify_ssl = true
 autopep8 = "*"
 
 [packages]
-django = "*"
+django = "3.0.13"
 pillow = "*"
 django-allauth = "*"
 django-braces = "*"
